/*
Copyright 2021 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package api_enricher;
option go_package = "/api_enricher";

service Enricher {
    rpc Syscalls(SyscallsRequest) returns (SyscallsResponse) {}
    rpc ResetSyscalls(SyscallsRequest) returns (EmptyResponse) {}
    rpc Avcs(AvcRequest) returns (AvcResponse) {}
    rpc ResetAvcs(AvcRequest) returns (EmptyResponse) {}
}

message SyscallsRequest {
    string profile = 1;
}

message SyscallsResponse {
    repeated string syscalls = 1;
    string go_arch = 2;
}

message AvcRequest {
    string profile = 1;
}

message AvcResponse {
    message SelinuxAvc {
        string perm = 1;
        string scontext = 2;
        string tcontext = 3;
        string tclass = 4;
    }
    repeated SelinuxAvc avc = 1;
}

message EmptyResponse {}
